@startuml
title Diagrama UML - Calculo de areas con metodos (OCP y LSP)

interface Figura {
    +calcularArea(): double
}

class Circulo {
    -radio: double
    +Circulo(radio: double)
    +calcularArea(): double
}

class Rectangulo {
    -base: double
    -altura: double
    +Rectangulo(base: double, altura: double)
    +calcularArea(): double
}

class Triangulo {
    -base: double
    -altura: double
    +Triangulo(base: double, altura: double)
    +calcularArea(): double
}

class CalculadoraDeAreas {

    +calcularAreaTotal(figuras: List<Figura>): double
}

Figura <|.. Circulo
Figura <|.. Rectangulo
Figura <|.. Triangulo
CalculadoraDeAreas --> "1..*" Figura : usa

@enduml
